<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="#fff"
            >
            <TextView
                android:id="@+id/back"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@mipmap/back"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teamlist"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textSize="18sp"
                android:textColor="#333"
                />
            <TextView
                android:id="@+id/addshow"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:background="@mipmap/add"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"

                />
        </RelativeLayout>
        <!--做图片轮播-->
        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:paddingTop="10dp"
            android:layout_gravity="center"
            >

        </android.support.v4.view.ViewPager>

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="180dp"
        android:background="@mipmap/nav"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_marginBottom="130dp"
        android:padding="20dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="16sp"
                android:textColor="#444"
                />
            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="yao"
                android:textSize="16sp"
                android:textColor="#444"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/department"
                android:textSize="16sp"
                android:textColor="#444"
                />
            <TextView
                android:id="@+id/department"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="软件"
                android:textSize="16sp"
                android:textColor="#444"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phonenumber"
                android:textSize="16sp"
                android:textColor="#444"
                />
            <TextView
                android:id="@+id/phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1234567890"
                android:textSize="16sp"
                android:textColor="#444"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mail"
                android:textSize="16sp"
                android:textColor="#444"
                />
            <TextView
                android:id="@+id/mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="234567890@.qq.com"
                android:textSize="16sp"
                android:textColor="#444"
                />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
