<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@mipmap/background"
              android:orientation="vertical"
              xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#fff"
        >

        <ImageView
            android:id="@+id/back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/back"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="vertical"
        >

        <!--<ImageView-->
            <!--android:id="@+id/userIcon"-->
            <!--android:layout_width="100dp"-->
            <!--android:layout_height="100dp"-->
            <!--android:src="@mipmap/userportrait"-->
            <!--/>-->
        <com.pkmmte.view.CircularImageView
            android:id="@+id/userIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerInside"
            android:src="@mipmap/userportrait"
            app:border_width="8dp"
            app:border="true"
            app:border_color="#16f5f5f5"
            app:shadow="false"
            app:selector="true"
            app:selector_color="#4D000000"
            app:selector_stroke_width="8dp"
            app:selector_stroke_color="#16f5f5f5"
            />
            <!--app:layout_collapseMode="parallax"
            app:layout_collapseParallaxMultiplier="-1"-->
        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="小明"
            android:textColor="#444"
            android:textSize="16sp"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/department"
            android:textColor="#444"
            android:textSize="16sp"
            />

        <EditText
            android:id="@+id/department"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:text="软件"
            android:singleLine="true"
            android:background="#00000000"
            android:textColor="#444"
            android:textSize="16sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="30dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phonenumber"
            android:textColor="#444"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1234567890"
            android:textColor="#444"
            android:textSize="16sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="30dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail"
            android:textColor="#444"
            android:textSize="16sp"
            />

        <EditText
            android:id="@+id/mail"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:text="234567890@.qq.com"
            android:textColor="#444"
            android:singleLine="true"
            android:background="#00000000"

            android:textSize="16sp"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/setInformation"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/Modify_information"
        android:textColor="#333"
        android:textSize="16sp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        />


</LinearLayout>