<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    tools:context="com.edu.chenshaohong.attendance.activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/phoneNumber"
                android:textColor="#333"
                android:textSize="16sp"
                android:gravity="bottom"
                android:layout_marginBottom="5dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="5dp"
                >
                <EditText
                    android:id="@+id/et_phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:background="#00000000"
                    android:hint="请输入手机号"
                    android:textColorHint="@color/colorGray"
                    android:paddingLeft="5dp"
                    android:textSize="16sp"
                    android:inputType="number"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/colorGray"
                    />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/verificationCode"
                android:textColor="#333"
                android:gravity="bottom"
                android:layout_marginBottom="5dp"
                android:textSize="16sp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="5dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/et_yanZheng"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="34dp"
                        android:inputType="number"
                        android:textSize="16sp"
                        android:textColorHint="@color/colorGray"
                        android:hint="请输入验证码"
                        android:paddingLeft="5dp"
                        android:background="#00000000"
                        />
                    <View
                        android:layout_width="1px"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:background="@color/colorGray"
                        />
                    <TextView
                        android:id="@+id/tv_getYanZheng"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="bottom"
                        android:layout_marginLeft="5dp"
                        android:textSize="16sp"
                        android:textColor="#333"
                        android:layout_marginBottom="5dp"
                        android:text="@string/getverificationCode"
                        />

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/colorGray"
                    />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="#00000000"
        android:textColor="#333"
        android:textSize="20sp"
        android:text="@string/btn_login"
        />

</RelativeLayout>
