<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
    >

    <RelativeLayout
        android:id="@+id/ll_1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#fff"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        >

        <TextView
            android:id="@+id/back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@mipmap/back"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/Attendance_details"
            android:textColor="#333"
            android:textSize="18sp"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ll_2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/ll_1"
        android:paddingLeft="25dp"
        android:paddingRight="10dp"
        >

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="yao"
            android:textColor="#333"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textColor="#000000"
            android:textSize="20sp"
            tools:text="2016-04-26"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            >

            <LinearLayout
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                >

                <View
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:background="@color/green"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="正常"
                    android:textColor="#333"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                >

                <View
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:background="@color/yellow"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="迟到"
                    android:textColor="#333"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                >

                <View
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:background="@color/red"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="缺勤"
                    android:textColor="#333"
                    />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/fl_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_2"
        android:layout_marginTop="20dp">

    </FrameLayout>
    <!--日考勤记录-->
    <LinearLayout
        android:id="@+id/ll_no_data"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/ll_monthrecord"
        android:gravity="center_horizontal"
        android:visibility="visible"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="暂无日考勤数据"
            />
    </LinearLayout>
    <!--本月考勤记录-->
    <LinearLayout
        android:id="@+id/ll_monthrecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/This_month_attendance_statistics"
            android:textColor="#333"
            android:textSize="20sp"
            />

        <LinearLayout
            android:id="@+id/data_no"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_margin="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="暂无月考勤数据"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/data_yes"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/normal_day"
                    android:textColor="@color/green"
                    />

                <TextView
                    android:id="@+id/normal_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/green"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/late_day"
                    android:textColor="@color/yellow"
                    />

                <TextView
                    android:id="@+id/late_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/yellow"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/absenteeism_day"
                    android:textColor="@color/red"
                    />

                <TextView
                    android:id="@+id/absenteeism_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/red"
                    />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/fl_daydata"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_above="@+id/ll_monthrecord"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        >

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="35dp"
            android:background="#f00"/>

        <com.edu.chenshaohong.attendance.utils.MyView
            android:id="@+id/myView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

        </com.edu.chenshaohong.attendance.utils.MyView>
    </FrameLayout>


</RelativeLayout>